# SkyShop

./: README.md  main.py  pyproject.toml  utils.py
htmlcov/: index.html
src/: category.py  category_module.py  lawngrass.py  my_iterator.py  print_mixin.py  product.py  product_module.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawngrass.py  test_print_mixin.py  test_product.py  test_smartphone.py
