[project]
name = "skyshop"
version = "0.1.0"
description = ""
authors = [
    {name = "sbike",email = "mysilverbike@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"
isort = "^6.0.0"


[tool.mypy]
disallow_untyped_defs = false
warn_return_any = false
